# pygwnbr

./: .gitignore  README.md  paper.bib  paper.md  pyproject.toml
examples/: README.md  basic_usage.py  generate_synthetic_data.py  synthetic_data.csv  synthetic_results.csv
gwnbr/: __init__.py  stationarity.py
gwnbr/models/: base.py  gwnbrg.py  gwpr.py
