[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"  

[project]
name = "gwnbr"
version = "0.1.0"
description = "Geographically Weighted Negative Binomial Regression in Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "geographically weighted regression",
    "negative binomial",
    "spatial statistics",
    "overdispersion",
    "count data",
    "transportation safety",
    "GWR",
    "GWNBR",
    "GWPR",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "joblib>=1.2",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.6",
    "geopandas>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "sphinx>=6.0",
    "sphinx-rtd-theme",
    "nbsphinx",
]
all = ["gwnbr[viz,dev]"]

[project.urls]
Homepage      = "https://github.com/ananta-mimo/gwnbr"
Repository    = "https://github.com/ananta-mimo/gwnbr"
Documentation = "https://github.com/ananta-mimo/gwnbr/blob/main/THEORY.md"
"Bug Tracker" = "https://github.com/ananta-mimo/gwnbr/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gwnbr*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
